--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -52,12 +52,13 @@ body{
     left: 50%;
     background-color: #F00;
     transform: translate(-50%, -50%);
-
+    text-align: center;
 }
 
 .heading-primary{
     color: #FFF;
-    text-transform: uppercase
+    text-transform: uppercase;
+    margin-bottom: 60px;
 }
 
 .heading-primary-main{
@@ -116,4 +117,27 @@ body{
         opacity: 1;
         transform: translate(0);
     }
+}
+
+.btn:link,
+.btn:visited{
+    text-transform: uppercase;
+    text-decoration: none;
+    padding: 15px 40px;
+    display: inline-block;
+    border-radius: 100px;
+    transition: all .2s;
+}
+
+.btn:hover{
+    transform: translateY(-3px);
+}
+
+.btn:active{
+    transform: translateY(-1px);
+}
+
+.btn-white{
+    background-color: #fff;
+    color: #777;
 }
